--- a/content/0.index.md
+++ b/content/0.index.md
@@ -15,11 +15,11 @@ cta:
   - /introduction/getting-started
 secondary:
   - Open on GitHub →
-  - https://github.com/nuxt-themes/docus
+  - https://www.google.com
 ---
 
 #title
-The best place to start your documentation.
+¡Hola! Bienvenido.
 
 #description
 Write pages in [Markdown](https://content.nuxtjs.org), use [Vue](https://vuejs.org) components and enjoy the power of [Nuxt](https://nuxt.com).
