--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,16 +1,14 @@
-# Getting Started
+# A
 
-From your Markdown files to a deployed website in few minutes.
+## Acahual:
 
-## Play online
-
-You can start playing with Docus in your browser using Stackblitz:
+Monte, maleza, lugar bajo.
 
 :button-link[Play on StackBlitz]{size="small" icon="IconStackBlitz" href="https://stackblitz.com/github/nuxt-themes/docus-starter" blank}
 
-## Create a new project
+## Acatarrado:
 
-1. Start a fresh Docus project with:
+Que está harto de algo.
 
 ```bash [npx]
 npx nuxi@latest init docs -t themes/docus
