--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,55 +1,3 @@
-# A
-
-## Acahual:
+# Acahual:
 
 Monte, maleza, lugar bajo.
-
-:button-link[Play on StackBlitz]{size="small" icon="IconStackBlitz" href="https://stackblitz.com/github/nuxt-themes/docus-starter" blank}
-
-## Acatarrado:
-
-Que está harto de algo.
-
-```bash [npx]
-npx nuxi@latest init docs -t themes/docus
-```
-
-2. Install the dependencies in the `docs` folder:
-
-::code-group
-
-  ```bash [npm]
-  npm install
-  ```
-
-  ```bash [yarn]
-  yarn install
-  ```
-
-  ```bash [pnpm]
-  pnpm install --shamefully-hoist
-  ```
-
-::
-
-3. Run the `dev` command to start Docus in development mode:
-
-::code-group
-
-```bash [npm]
-npm run dev
-```
-
-```bash [yarn]
-yarn dev
-```
-
-```bash [pnpm]
-pnpm run dev
-```
-
-::
-
-::alert{type="success"}
-✨ Well done! A browser window should automatically open for <http://localhost:3000>
-::
