--- a/content/0.index.md
+++ b/content/0.index.md
@@ -11,10 +11,10 @@ main:
 ::block-hero
 ---
 cta:
-  - Get started
-  - /introduction/getting-started
+  - Ir al diccionario
+  - /introduction/
 secondary:
-  - Open on GitHub →
+  - Conoce más →
   - https://www.google.com
 ---
 
@@ -22,17 +22,11 @@ secondary:
 ¡Hola! Bienvenido.
 
 #description
-Write pages in [Markdown](https://content.nuxtjs.org), use [Vue](https://vuejs.org) components and enjoy the power of [Nuxt](https://nuxt.com).
+El diccionario donde encuentras varios términos.
 
 #extra
   ::list
-  - **+50 Components** ready to build rich pages
-  - **Docs** and **Page** layouts
-  - Start from a `README`, scale to a framework documentation
-  - Navigation and Table of Contents generation
-  - Fully configurable design system
-  - Leverages [**Typography**](https://typography.nuxt.space/) and [**Elements**](https://elements.nuxt.dev)
-  - Used on [Content Documentation](https://content.nuxtjs.org)
+  - Diccionario de modismos de Tabasco.
   ::
 
 #support
