--- a/content/0.index.md
+++ b/content/0.index.md
@@ -6,7 +6,8 @@ main:
   fluid: false
 ---
 
-:ellipsis{right=0px width=75% blur=150px}
+::ellipsis{blur="150px" right="0px" width="75%"}
+::
 
 ::block-hero
 ---
@@ -17,7 +18,6 @@ secondary:
   - Conoce más →
   - https://www.google.com
 ---
-
 #title
 ¡Hola! Bienvenido.
 
@@ -25,69 +25,93 @@ secondary:
 El diccionario donde encuentras varios términos.
 
 #extra
-  ::list
+  :::list
   - Diccionario de modismos de Tabasco.
-  ::
+  :::
 
 #support
-  ::terminal
+  :::terminal
   ---
   content:
-  - npx nuxi@latest init -t themes/docus
-  - cd docs
-  - npm install
-  - npm run dev
+    - npx nuxi@latest init -t themes/docus
+    - cd docs
+    - npm install
+    - npm run dev
   ---
-  ::
+  :::
 ::
 
 ::card-grid
+  :::card
+  ---
+  icon: logos:nuxt-icon
+  ---
+  #title
+  Nuxt Architecture
+  
+  #description
+  Harness the full power of [Nuxt 3](https://v3.nuxtjs.org) and its [modules](https://modules.nuxtjs.org) ecosystem.
+  :::
+
+  :::card
+  ---
+  icon: IconNuxtStudio
+  ---
+  #title
+  Nuxt Studio ready
+  
+  #description
+  Edit your theme content and appearance with live-preview within [Nuxt Studio](https://nuxt.studio).
+  :::
+
+  :::card
+  ---
+  icon: logos:vue
+  ---
+  #title
+  Vue Components
+  
+  #description
+  Use built-in components (or your own!) inside your content.
+  :::
+
+  :::card
+  ---
+  icon: simple-icons:markdown
+  ---
+  #title
+  Write Markdown
+  
+  #description
+  Enjoy the ease and simplicity of Markdown and discover [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
+  :::
+
+  :::card
+  ---
+  icon: noto:rocket
+  ---
+  #title
+  Deploy anywhere
+  
+  #description
+  Zero config on [Vercel](https://vercel.com) or [Netlify](https://netlify.com). Choose between static generation, on-demand rendering (Node) or edge-side rendering on [CloudFlare workers](https://workers.cloudflare.com).
+  :::
+
+  :::card
+  ---
+  icon: noto:puzzle-piece
+  ---
+  #title
+  Extensible.
+  
+  #description
+  Customize the whole design, or add components using slots - you can make Docus your own.
+  :::
+
 #title
 What's included
 
 #root
-:ellipsis{left=0px width=40rem top=10rem blur=140px}
-
-#default
-  ::card{icon=logos:nuxt-icon}
-  #title
-  Nuxt Architecture
-  #description
-  Harness the full power of [Nuxt 3](https://v3.nuxtjs.org) and its [modules](https://modules.nuxtjs.org) ecosystem.
-  ::
-
-  ::card{icon=IconNuxtStudio}
-  #title
-  Nuxt Studio ready
-  #description
-  Edit your theme content and appearance with live-preview within [Nuxt Studio](https://nuxt.studio).
-  ::
-
-  ::card{icon=logos:vue}
-  #title
-  Vue Components
-  #description
-  Use built-in components (or your own!) inside your content.
-  ::
-
-  ::card{icon=simple-icons:markdown}
-  #title
-  Write Markdown
-  #description
-  Enjoy the ease and simplicity of Markdown and discover [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
-  ::
-
-  ::card{icon=noto:rocket}
-  #title
-  Deploy anywhere
-  #description
-  Zero config on [Vercel](https://vercel.com) or [Netlify](https://netlify.com). Choose between static generation, on-demand rendering (Node) or edge-side rendering on [CloudFlare workers](https://workers.cloudflare.com).
-  ::
-
-  ::card{icon=noto:puzzle-piece}
-  #title
-  Extensible.
-  #description
-  Customize the whole design, or add components using slots - you can make Docus your own.
-  ::
+  :::ellipsis{blur="140px" left="0px" top="10rem" width="40rem"}
+  :::
 ::
