16 changes by Nuxt Studio

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -13,10 +13,10 @@ main:
 ---
 cta:
   - Ir al diccionario
-  - /introduction/
+  - /intro/
 secondary:
   - Conoce más →
-  - https://www.google.com
+  - /intro/
 ---
 #title
 ¡Hola! Bienvenido.
@@ -26,18 +26,8 @@ El diccionario donde encuentras varios términos.
 
 #extra
   :::list
-  - Diccionario de modismos de Tabasco.
-  :::
-
-#support
-  :::terminal
-  ---
-  content:
-    - npx nuxi@latest init -t themes/docus
-    - cd docs
-    - npm install
-    - npm run dev
-  ---
+  - Diccionario de vocabulario de Tabasco.
+  - Raíces de palabras.
   :::
 ::
 
@@ -55,7 +45,7 @@ El diccionario donde encuentras varios términos.
 
   :::card
   ---
-  icon: IconNuxtStudio
+  icon: noto:basketball
   ---
   #title
   Nuxt Studio ready
@@ -109,7 +99,7 @@ El diccionario donde encuentras varios términos.
   :::
 
 #title
-What's included
+De la historia a la vida
 
 #root
   :::ellipsis{blur="140px" left="0px" top="10rem" width="40rem"}
