--- a/content/0.index.md
+++ b/content/0.index.md
@@ -19,7 +19,10 @@ secondary:
   - /intro/
 ---
 #title
-¡Hola! Bienvenido.
+
+¡Hola!
+
+<Greeting />
 
 #description
 El diccionario donde encuentras varios términos.
