--- a/content/0.index.md
+++ b/content/0.index.md
@@ -33,9 +33,7 @@ El diccionario donde encuentras varios términos.
   :::
 ::
 
-<Suspense>
-  <SaludoHora />
-</Suspense>
+::SaludoHora::
 
 ::card-grid
   :::card
