3 changes by Nuxt Studio

--- a/content/2.a/1.index.md
+++ b/content/2.a/1.index.md
@@ -1,3 +1,15 @@
 # A
 
 Primera letra del abecedario español.
+
+## Preposición
+
+S. XIII. Del latín *ad*.
+
+'a', 'hacia', 'para'.
+
+Del griego *ἄ-, ἄ(ν)-*
+
+*a-, an-*
+
+Negación, privación.
