1 change by Nuxt Studio

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -19,9 +19,7 @@ secondary:
   - /intro/
 ---
 #title
-
 ¡Hola!
-
 
 #description
 El diccionario donde encuentras varios términos.
@@ -33,7 +31,7 @@ El diccionario donde encuentras varios términos.
   :::
 ::
 
-::SaludoHora::
+\::SaludoHora::
 
 ::card-grid
   :::card
